--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,7 +20,7 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
@@ -29,6 +29,8 @@ dependencies {
     compile 'com.google.firebase:firebase-database:10.0.1'
     compile 'com.google.firebase:firebase-auth:10.0.1'
     compile 'com.zhaoxiaodan.miband:miband-sdk:1.1.2'
+    compile 'com.github.PhilJay:MPAndroidChart:v3.0.2'
+    compile 'im.dacer:AndroidCharts:1.0.3'
     testCompile 'junit:junit:4.12'
 }
 
