Connect Band through Bluetooth WIP

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.dashwood.ficby">
 
+    <uses-permission android:name="android.permission.BLUETOOTH" />
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ficby_launcher"
@@ -20,7 +23,9 @@
         <activity android:name=".SignupActivity" />
         <activity android:name=".ForgetPasswordActivity" />
         <activity android:name=".AccountActivity" />
-        <activity android:name=".BandActivity"></activity>
+        <activity android:name=".BandActivity" />
+        <activity android:name=".ScanBTActivity"
+            android:theme="@style/Transparent"></activity>
     </application>
 
 </manifest>
