--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     compile 'com.github.PhilJay:MPAndroidChart:v3.0.2'
     compile 'im.dacer:AndroidCharts:1.0.3'
     testCompile 'junit:junit:4.12'
+    compile files('libs/commons-io-2.4.jar')
 }
 
 
