--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.google.firebase:firebase-database:10.0.1'
     compile 'com.google.firebase:firebase-auth:10.0.1'
+    compile 'com.google.android.gms:play-services-nearby:10.0.1'
     compile 'com.zhaoxiaodan.miband:miband-sdk:1.1.2'
     compile 'com.github.PhilJay:MPAndroidChart:v3.0.2'
     compile 'im.dacer:AndroidCharts:1.0.3'
