Add ALTBeacon Library & Adjust Beacon Activity Thread Logic

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     compile 'com.google.firebase:firebase-database:10.0.1'
     compile 'com.google.firebase:firebase-auth:10.0.1'
     compile 'com.google.android.gms:play-services:10.0.1'
+    compile 'org.altbeacon:android-beacon-library:2+'
     compile 'com.zhaoxiaodan.miband:miband-sdk:1.1.2'
     compile 'com.github.PhilJay:MPAndroidChart:v3.0.2'
     compile 'im.dacer:AndroidCharts:1.0.3'
