--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,18 +24,20 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+    compile files('libs/commons-io-2.4.jar')
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.google.firebase:firebase-database:10.0.1'
     compile 'com.google.firebase:firebase-auth:10.0.1'
     compile 'com.google.android.gms:play-services:10.0.1'
-    compile 'org.altbeacon:android-beacon-library:2+'
+    compile 'org.altbeacon:android-beacon-library:2.+'
     compile 'com.zhaoxiaodan.miband:miband-sdk:1.1.2'
     compile 'com.github.PhilJay:MPAndroidChart:v3.0.2'
+    compile 'uk.co.alt236:bluetooth-le-library-android:1.0.0'
     compile 'im.dacer:AndroidCharts:1.0.3'
     testCompile 'junit:junit:4.12'
-    compile files('libs/commons-io-2.4.jar')
 }
+
 
 
 
