--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,17 +10,17 @@
 
     <application
         android:allowBackup="true"
+        android:hardwareAccelerated="false"
         android:icon="@mipmap/ficby_launcher"
         android:label="@string/app_name"
-        android:hardwareAccelerated="false"
+        android:largeHeap="true"
         android:roundIcon="@mipmap/ficby_launcher"
         android:supportsRtl="true"
-        android:largeHeap="true"
         android:theme="@style/AppTheme">
-
         <meta-data
             android:name="com.google.android.nearby.messages.API_KEY"
             android:value="AIzaSyAjdthAXWqiXApMgUrw75WWCuwjywEkKz0" />
+
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -37,7 +37,8 @@
             android:name=".ScanBTActivity"
             android:theme="@style/Transparent" />
         <activity android:name=".BeaconActivity" />
-        <activity android:name=".MoreActivity"></activity>
+        <activity android:name=".MoreActivity" />
+        <activity android:name=".ScanBeaconActivity"></activity>
     </application>
 
 </manifest>
