--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,16 +9,16 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
+        android:name="android.support.multidex.MultiDexApplication"
         android:allowBackup="true"
         android:hardwareAccelerated="false"
         android:icon="@mipmap/ficby_launcher"
         android:label="@string/app_name"
         android:largeHeap="true"
+        android:resizeableActivity="true"
         android:roundIcon="@mipmap/ficby_launcher"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        android:name="android.support.multidex.MultiDexApplication"
-        android:resizeableActivity="true">
+        android:theme="@style/AppTheme">
         <meta-data
             android:name="com.google.android.nearby.messages.API_KEY"
             android:value="AIzaSyAjdthAXWqiXApMgUrw75WWCuwjywEkKz0" />
@@ -45,6 +45,7 @@
         <activity android:name=".BeaconActivity" />
         <activity android:name=".MoreActivity" />
         <activity android:name=".ScanBeaconActivity" />
+        <activity android:name=".HeartrateActivity"></activity>
     </application>
 
 </manifest>
